added delete button for tasks details. Fixed major error where it wasn't putting data in UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="lbl_done">Done</string>
     <string name="btn_save">Save</string>
     <string name="btn_add">Add New Task</string>
+    <string name="btn_delete">Delete</string>
+    <string name="confirm_delete">Confirm Delete?</string>
+    <string name="Yes">Yes</string>
+    <string name="No">No</string>
 </resources>
